# modulino-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  multiplexer.rs
src/: buttons.rs  buzzer.rs  color.rs  distance.rs  error.rs  hub.rs  i2c_device.rs  joystick.rs  knob.rs  latch_relay.rs  led_matrix.rs  lib.rs  light.rs  movement.rs  opto_relay.rs  pixels.rs  pressure.rs  thermo.rs  vibro.rs
tests/: buttons_test.rs  buzzer_test.rs  discover_test.rs  distance_test.rs  hub_test.rs  joystick_test.rs  knob_test.rs  latch_relay_test.rs  led_matrix_test.rs  light_test.rs  movement_test.rs  opto_relay_test.rs  pixels_test.rs  pressure_test.rs  vibro_test.rs
