[package]
name = "modulino"
version = "0.1.0"
edition = "2021"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
description = "A hardware-agnostic, no_std Rust driver for Arduino Modulino breakout boards"
license = "MIT OR Apache-2.0"
repository = "https://github.com/melastmohican/modulino-rs"
documentation = "https://docs.rs/modulino"
readme = "README.md"
keywords = ["embedded", "i2c", "arduino", "modulino", "no_std"]
categories = ["embedded", "no-std", "hardware-support"]
rust-version = "1.75"

[dependencies]
embedded-hal = "1.0"
libm = "0.2"
hs3003 = "0.1"

[dev-dependencies]
embedded-hal-mock = "0.11"

[features]
default = []
# Enable defmt debug formatting
defmt = ["dep:defmt"]

[dependencies.defmt]
version = "0.3"
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
